Added docker config for invoicing-python

--- a/.envs.example/payments.env
+++ b/.envs.example/payments.env
@@ -1,3 +1,4 @@
 ASPNETCORE_URLS: "http://+:7239"
 MIGRATION_SCRIPTS: "/app/Payments/src/Payments.Infrastructure/Persistence/Migrations"
 ConnectionStrings__DefaultConnection: "Server=postgres;Port=5432;Username=postgres;Password=L7XQf2yL2l;Database=payments"
+EventBusSettings__HostAddress: "amqp://guest:guest@rabbitmq:5672"
