Refactoring, added .env examples

--- a/backend/InvoicingPython/.env.example
+++ b/backend/InvoicingPython/.env.example
@@ -1,9 +1,11 @@
 FLASK_APP = app.py
 FLASK_RUN_PORT=7271
 FLASK_DEBUG = true
-FLASK_SQLALCHEMY_DATABASE_URI = ""
-FLASK_RABBITMQ_CONNECTION = ""
+FLASK_SQLALCHEMY_DATABASE_URI = "postgresql://postgres:L7XQf2yL2l@localhost:5433/invoicing_python"
+FLASK_RABBITMQ_CONNECTION = "amqp://guest:guest@localhost:5672"
 FLASK_ADMINISTRATION_API = "https://localhost:7086/api"
+ADMINISTRATION_API = "https://localhost:7086/api"
 FLASK_SEED_DB = false
 FLASK_ERROR_404_HELP = false
-FLASK_CELERY_BROKER_URL = ""
+FLASK_CELERY_BROKER_URL = "amqp://guest:guest@localhost:5672//"
+MIGRATION_DIR = "app/infra/db/migrations"
