--- a/backend/ApiGateway/ApiGateway/appsettings.Development.json
+++ b/backend/ApiGateway/ApiGateway/appsettings.Development.json
@@ -14,7 +14,7 @@
   "GlobalConfiguration": {
     "Hosts": {
       "Administration": "https://localhost:7086",
-      "Payments": "https://localhost:7239",
+      "Payments": "http://localhost:7239",
       "Invoicing": "https://localhost:7271"
     }
   },
