--- a/backend/PaymentsNest/package.json
+++ b/backend/PaymentsNest/package.json
@@ -26,12 +26,16 @@
     "seed": "ts-node -r tsconfig-paths/register src/seed.ts -d ./typeorm.config.ts"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^3.6.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
